--- a/index.html
+++ b/index.html
@@ -1,95 +1,325 @@
-<!DOCTYPE html>
-<!--
-This is a demo of the neutrino oscillaiton using javascript
--->
-
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-<script src="http://d3js.org/d3.v3.min.js"></script>
-  <script src="assets/function-plot-1.16.5/dist/function-plot.js"></script>
-  <meta charset="utf-8">
-  <title>Neutrino Oscillaitons JS</title>
+	<meta charset="utf-8" />
+	<link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicon.png">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-  <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-<script type="text/x-mathjax-config">
-  MathJax.Hub.Config({
-    showProcessingMessages: false,
-    messageStyle: 'none',
-    tex2jax: {
-      inlineMath: [['$','$']],
-      displayMath: [['$$','$$']],
-      processEnvironments: false
-    },
-    TeX: {
-      equationNumbers: {
-        autoNumber: "AMS"
-      }
-    },
-    'HTML-CSS': {
-      imageFont: null
-    }
-  });
-</script>
+	<title>Neutrino Oscillations JS</title>
+
+	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+    <meta name="viewport" content="width=device-width" />
+
+
+    <!-- Bootstrap core CSS     -->
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+
+    <!-- Animation library for notifications   -->
+    <link href="assets/css/animate.min.css" rel="stylesheet"/>
+
+    <!--  Paper Dashboard core CSS    -->
+    <link href="assets/css/paper-dashboard.css" rel="stylesheet"/>
+
+
+    <!--  CSS for Demo Purpose, don't include it in your project     -->
+    <link href="assets/css/demo.css" rel="stylesheet" />
+
+
+    <!--  Fonts and icons     -->
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
+    <link href="assets/css/themify-icons.css" rel="stylesheet">
+
+    <!-- Functionplot and d3 BEGIN -->
+    <script src="http://d3js.org/d3.v3.min.js"></script>
+      <script src="assets/function-plot-1.16.5/dist/function-plot.js"></script>
+
+    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+
+    <script type="text/x-mathjax-config">
+      MathJax.Hub.Config({
+        showProcessingMessages: false,
+        messageStyle: 'none',
+        tex2jax: {
+          inlineMath: [['$','$']],
+          displayMath: [['$$','$$']],
+          processEnvironments: false
+        },
+        TeX: {
+          equationNumbers: {
+            autoNumber: "AMS"
+          }
+        },
+        'HTML-CSS': {
+          imageFont: null
+        }
+      });
+    </script>
+
+    <!-- Functionplot and d3 END -->
+
+    <!-- Neutrino Specific END -->
+    <link href="assets/neutrino/neutrino.css" rel="stylesheet">
+    <!-- Neutrino Specific END -->
+
 
 
 </head>
-
-
 <body>
 
-<div id="parameters">
-<p>
-<ul>
+<div class="wrapper">
+    <div class="sidebar" data-background-color="black" data-active-color="success">
 
-<li><span>Energy of neutrinos: <input id="vacEnergy" value="1"> MeV</span></li>
-<li><span>Mass squared difference of neutrinos: <input id="vacMassSquared" value=7.53> $\times 10 ^{-5} \mathrm{eV^2}$</span></li>
-<li><span>Vacuum mixing angle: <input id="vacMixingAngle" value="0.59"> rad</span></li>
-</ul>
+    <!--
+		Tip 1: you can change the color of the sidebar's background using: data-background-color="white | black"
+		Tip 2: you can change the color of the active button using the data-active-color="primary | info | success | warning | danger"
+	-->
 
-</p>
+    	<div class="sidebar-wrapper">
+            <div class="logo">
+                <a href="#" class="simple-text">
+                    Neutrino Oscillation JavaScript
+                </a>
+            </div>
+
+            <ul class="nav">
+                <li class="active">
+                    <a href="index.html">
+                        <i class="ti-panel"></i>
+                        <p>Vacuum Oscillations</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="misc.html">
+                        <i class="ti-bell"></i>
+                        <p>MISC</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="about.html">
+                        <i class="ti-bell"></i>
+                        <p>About</p>
+                    </a>
+                </li>
+            </ul>
+    	</div>
+    </div>
+
+    <div class="main-panel">
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar bar1"></span>
+                        <span class="icon-bar bar2"></span>
+                        <span class="icon-bar bar3"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">Vacuum Oscillations</a>
+                </div>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <a href="https://github.com/NeuPhysics/neutrino-oscillation-js">
+                                <i class="ti-github"></i>
+								<p>GitHub</p>
+                            </a>
+                        </li>
+                        <li class="dropdown">
+                              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                    <i class="ti-infinite"></i>
+                                    <p class="notification"></p>
+									<p>Neutrino Physics</p>
+									<b class="caret"></b>
+                              </a>
+                              <ul class="dropdown-menu">
+                                <li><a href="#">Notification 1</a></li>
+                                <li><a href="#">Notification 2</a></li>
+                                <li><a href="#">Notification 3</a></li>
+                                <li><a href="#">Notification 4</a></li>
+                                <li><a href="#">Another notification</a></li>
+                              </ul>
+                        </li>
+                    </ul>
+
+                </div>
+            </div>
+        </nav>
+
+
+        <div class="content">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="card">
+                            <div class="header">
+                                <h4 class="title">Two Flavor Oscillations: Survival Probability</h4>
+                                <p class="category">Vacuum Oscillations</p>
+                            </div>
+                            <div class="content">
+
+
+                            <!-- Input Parameters BEGIN -->
+                            <div class="row">
+                                    <div class="col-md-4">
+                                        <div class="form-group">
+                                            <label>Energy of Neutrinos (MeV)</label>
+                                            <input type="text" class="form-control border-input" placeholder="Energy" id="vacEnergy" value="1">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="form-group">
+                                            <label>Mass Squared Difference (×10<sup>-5</sup>eV<sup>2</sup>)</label>
+                                            <input type="text" class="form-control border-input" placeholder="Mass Squared Difference" id="vacMassSquared" value=7.53>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="form-group">
+                                            <label>Vacuum Mixing Angle (RAD)</label>
+                                            <input type="number" class="form-control border-input" placeholder="Mixing Angle" id="vacMixingAngle" value="0.59">
+                                        </div>
+                                    </div>
+                            </div>
+
+                            <div id="vacuum-oscillation" class="plot"></div>
+
+                            <script id="vacuum-oscillation-javascript">
+
+                            function plotvac() {
+
+                              var vacEnergyValue = document.getElementById("vacEnergy").value;
+                              var vacMassSquaredValue = document.getElementById("vacMassSquared").value;
+                              var vacMixingAngleValue = document.getElementById("vacMixingAngle").value;
+
+                              var vacOscLength = 2*parseFloat(vacEnergyValue)*4.0*197.0/(10^6 * parseFloat(vacMassSquaredValue) );
+
+                              functionPlot({
+                                title: 'Vacuum Oscillations' ,
+                                target: '#vacuum-oscillation',
+                                tip: {
+                                xLine: true,    // dashed line parallel to y = 0
+                                yLine: true,    // dashed line parallel to x = 0
+                                renderer: function (x, y, index) {
+                                  // the returning value will be shown in the tip
+                                  }
+                                },
+                                width: 800,
+                                height: 600,
+                                xAxis: {
+                                  label: 'Distance (km)',
+                                  domain: [0,vacOscLength]
+                                },
+                                yAxis: {
+                                  label: 'Survival Probability',
+                                  domain: [0,1]
+                                },
+                                grid: true,
+                                data: [{
+                                  fn: '1 - sin(2*'+vacMixingAngleValue+')^2'+'* sin(2*'+vacMassSquaredValue+'*10^(-5-12)*x*10^(18)/(197*4*'+vacEnergyValue+'))^2',
+                                }]
+                              });
+                            }
+
+
+                            plotvac()
+
+                            vacEnergy.addEventListener("input", plotvac)
+                            vacMassSquared.addEventListener("input", plotvac)
+                            vacMixingAngle.addEventListener("input", plotvac)
+
+                            </script>
+
+                                <!-- Input Parameters END -->
+
+                                <div class="footer">
+                                    <div class="chart-legend">
+                                        <i class="fa fa-circle text-info"></i>Transition Probability
+                                    </div>
+                                    <hr>
+                                    <div class="stats">
+                                        <i class="ti-info"></i> Calculated Using Analytical Formula. $
+                                            P(x) = \sin^2(2\theta_v) \sin^2\left( \delta m^2 x\big/4E \right)$
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+
+        <footer class="footer">
+            <div class="container-fluid">
+                <nav class="pull-left">
+                    <ul>
+
+                        <li>
+                            <a href="http://neutrino.xyz">
+                                Neutrino Physics
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://docs.neutrino.xyz">
+                               Neutrino Notes
+                            </a>
+                        </li>
+
+                    </ul>
+                </nav>
+                <div class="copyright pull-right">
+                    &copy; <script>document.write(new Date().getFullYear())</script>, made with <i class="fa fa-heart heart"></i> by <a href="http://openmetric.org">OctoMiao</a>
+                </div>
+            </div>
+        </footer>
+
+    </div>
 </div>
-
-  <div id="vacuum-oscillation"></div>
-
-
-
-<script id="vacuum-oscillation-javascript">
-
-function plotvac() {
-
-  var vacEnergyValue = document.getElementById("vacEnergy").value;
-  var vacMassSquaredValue = document.getElementById("vacMassSquared").value;
-  var vacMixingAngleValue = document.getElementById("vacMixingAngle").value;
-
-  functionPlot({
-    title: 'Vacuum Oscillations' ,
-    target: '#vacuum-oscillation',
-    width: 800,
-    height: 600,
-    xAxis: {
-      label: 'Distance',
-      domain: [0,100]
-    },
-    yAxis: {
-      label: 'Probability',
-      domain: [0,1]
-    },
-    grid: true,
-    data: [{
-      fn: 'sin(2*'+vacMixingAngleValue+')^2'+'* sin(2*'+vacMassSquaredValue+'*10^(-5-12)*x*10^(18)/(197*4*'+vacEnergyValue+'))^2',
-    }]
-  });
-}
-
-
-plotvac()
-
-vacEnergy.addEventListener("input", plotvac)
-vacMassSquared.addEventListener("input", plotvac)
-vacMixingAngle.addEventListener("input", plotvac)
-
-</script>
 
 
 </body>
+
+    <!--   Core JS Files   -->
+    <script src="assets/js/jquery-1.10.2.js" type="text/javascript"></script>
+	<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
+
+	<!--  Checkbox, Radio & Switch Plugins -->
+	<script src="assets/js/bootstrap-checkbox-radio.js"></script>
+
+	<!--  Charts Plugin -->
+	<script src="assets/js/chartist.min.js"></script>
+
+    <!--  Notifications Plugin    -->
+    <script src="assets/js/bootstrap-notify.js"></script>
+
+    <!--  Google Maps Plugin    -->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+
+    <!-- Paper Dashboard Core javascript and methods for Demo purpose -->
+	<script src="assets/js/paper-dashboard.js"></script>
+
+    <!-- WIP Warning -->
+    <script type="text/javascript">
+    	$(document).ready(function(){
+
+
+        	$.notify({
+            	icon: 'ti-pulse',
+            	message: "Welcome to <b>Neutrino Oscillations JS</b> (Work In Progress). We appreciate your bug report and suggestions on <a href='https://github.com/NeuPhysics/neutrino-oscillation-js/issues' style='color:black;'>github</a>."
+
+            },{
+                type: 'info',
+                timer: 10000,
+                placement: {
+                    from: 'bottom',
+                    align: 'left'
+                }
+            });
+
+    	});
+	</script>
+
+
 </html>
