update dropdown links

--- a/about.html
+++ b/about.html
@@ -98,11 +98,10 @@
 									<b class="caret"></b>
                               </a>
                               <ul class="dropdown-menu">
-                                <li><a href="#">Notification 1</a></li>
-                                <li><a href="#">Notification 2</a></li>
-                                <li><a href="#">Notification 3</a></li>
-                                <li><a href="#">Notification 4</a></li>
-                                <li><a href="#">Another notification</a></li>
+                                <li><a href="http://docs.neutrino.xyz/">Neutrino Notes</a></li>
+                                <li><a href="http://neutrino.xyz/neutrino-map/">Neutrino Map</a></li>
+                                <li><a href="https://github.com/NeuPhysics/neupackage">Neutrino Packages</a></li>
+                                <li><a href="https://github.com/NeuPhysics">NeuPhysics @ GitHub</a></li>
                               </ul>
                         </li>
                     </ul>
