--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
     <link href="assets/css/paper-dashboard.css" rel="stylesheet"/>
 
 
-    <!--  CSS for Demo Purpose, don't include it in your project     -->
-    <link href="assets/css/demo.css" rel="stylesheet" />
 
 
     <!--  Fonts and icons     -->
@@ -86,19 +84,19 @@
             <ul class="nav">
                 <li class="active">
                     <a href="index.html">
-                        <i class="ti-panel"></i>
+                        <i class="ti-loop"></i>
                         <p>Vacuum Oscillations</p>
                     </a>
                 </li>
                 <li>
                     <a href="misc.html">
-                        <i class="ti-bell"></i>
+                        <i class="ti-package"></i>
                         <p>MISC</p>
                     </a>
                 </li>
                 <li>
                     <a href="about.html">
-                        <i class="ti-bell"></i>
+                        <i class="ti-pulse"></i>
                         <p>About</p>
                     </a>
                 </li>
@@ -320,5 +318,15 @@
     	});
 	</script>
 
+    <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-66327435-4', 'auto');
+        ga('send', 'pageview');
+
+    </script>
 
 </html>
