--- a/misc.html
+++ b/misc.html
@@ -50,19 +50,19 @@
             <ul class="nav">
                 <li>
                     <a href="index.html">
-                        <i class="ti-panel"></i>
+                        <i class="ti-loop"></i>
                         <p>Vacuum Oscillations</p>
                     </a>
                 </li>
                 <li class="active">
                     <a href="misc.html">
-                        <i class="ti-bell"></i>
+                        <i class="ti-package"></i>
                         <p>MISC</p>
                     </a>
                 </li>
                 <li>
                     <a href="about.html">
-                        <i class="ti-bell"></i>
+                        <i class="ti-pulse"></i>
                         <p>About</p>
                     </a>
                 </li>
@@ -195,5 +195,16 @@
 
 	<!-- Paper Dashboard DEMO methods, don't include it in your project! -->
 	<script src="assets/js/demo.js"></script>
+
+    <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-66327435-4', 'auto');
+        ga('send', 'pageview');
+
+    </script>
 
 </html>
