:boom: added linked flavor and mass eigenstates; added initial condition input

--- a/about.html
+++ b/about.html
@@ -55,6 +55,12 @@
                     </a>
                 </li>
                 <li>
+                    <a href="matter.html">
+                        <i class="ti-loop"></i>
+                        <p>Oscillations in Matter</p>
+                    </a>
+                </li>
+                <li>
                     <a href="misc.html">
                         <i class="ti-package"></i>
                         <p>MISC</p>
