--- a/matter.html
+++ b/matter.html
@@ -88,7 +88,7 @@
                         <p>Vacuum Oscillations</p>
                     </a>
                 </li>
-                <li>
+                <li class="active">
                     <a href="matter.html">
                         <i class="ti-loop"></i>
                         <p>Oscillations in Matter</p>
