--- a/misc.html
+++ b/misc.html
@@ -54,6 +54,12 @@
                         <p>Vacuum Oscillations</p>
                     </a>
                 </li>
+                <li>
+                    <a href="matter.html">
+                        <i class="ti-loop"></i>
+                        <p>Oscillations in Matter</p>
+                    </a>
+                </li>
                 <li class="active">
                     <a href="misc.html">
                         <i class="ti-package"></i>
