--- a/vacuum3.html
+++ b/vacuum3.html
@@ -6,7 +6,7 @@
 	<link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicon.png">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-	<title>Neutrino Oscillations JS</title>
+	<title>Vacuum 3 Flavor Oscillations @ Neutrino Oscillations JS</title>
 
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
@@ -59,6 +59,7 @@
 
     <!-- Neutrino Specific END -->
     <link href="assets/neutrino/neutrino.css" rel="stylesheet">
+    <script src="assets/neutrino/vacuum.js"></script>
     <!-- Neutrino Specific END -->
 
 
@@ -82,12 +83,12 @@
             </div>
 
             <ul class="nav">
-                <li class="active">
+                <li>
                     <a href="index.html">
                         <p>Vacuum Oscillations (2)</p>
                     </a>
                 </li>
-                <li>
+                <li class="active">
                     <a href="vacuum3.html">
                         <p>Vacuum Oscillations (3)</p>
                     </a>
@@ -122,7 +123,7 @@
                         <span class="icon-bar bar2"></span>
                         <span class="icon-bar bar3"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Vacuum Oscillations</a>
+                    <a class="navbar-brand" href="#">Vacuum Oscillations (3)</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
@@ -159,8 +160,8 @@
                     <div class="col-md-12">
                         <div class="card">
                             <div class="header">
-                                <h4 class="title">Two Flavor Oscillations: Survival Probability</h4>
-                                <p class="category">Vacuum Oscillations</p>
+                                <h4 class="title">Three Flavor Oscillations</h4>
+                                <p class="category">Vacuum 3 Flavor Oscillations</p>
                             </div>
                             <div class="content">
 
@@ -194,15 +195,7 @@
                             </div>
 
                             <div id="vacuum-oscillation" class="plot"></div>
-                            <div class="chart-legend" style="text-align:center;">
-                                <span style="color:#0074D9;"><i class="fa fa-circle"></i>$\nu_e$ Probability</span>
-                                <span style="color:red;"><i class="fa fa-circle"></i>$\nu_x$ Probability</span>
-                            </div>
                             <div id="vacuum-oscillation-mass-eigenstate" class="plot"></div>
-                            <div class="chart-legend" style="text-align:center;">
-                                <span style="color:#0074D9;"><i class="fa fa-circle"></i>$\nu_1$ Probability</span>
-                                <span style="color:red;"><i class="fa fa-circle"></i>$\nu_2$ Probability</span>
-                            </div>
 
 
                             <script id="vacuum-oscillation-javascript">
@@ -300,7 +293,10 @@
                                 <!-- Input Parameters END -->
 
                                 <div class="footer">
-
+                                    <div class="chart-legend">
+                                        <span style="color:#0074D9;"><i class="fa fa-circle"></i>$\nu_e$ Probability</span>
+                                        <span style="color:red;"><i class="fa fa-circle"></i>$\nu_x$ Probability</span>
+                                    </div>
                                     <hr>
                                     <div class="stats">
                                         <i class="ti-info"></i> Calculated Using Analytical Formula. $
@@ -366,7 +362,7 @@
 	<script src="assets/js/paper-dashboard.js"></script>
 
     <!-- WIP Warning -->
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
     	$(document).ready(function(){
 
 
@@ -384,7 +380,7 @@
             });
 
     	});
-	</script>
+	</script> -->
 
     <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
