:pill: change input type from text to number

--- a/index.html
+++ b/index.html
@@ -170,13 +170,13 @@
                                     <div class="col-md-3">
                                         <div class="form-group">
                                             <label style="display:block;">Energy of Neutrinos</label>
-                                            <input style="display:inline;width:50%;" type="text" class="form-control border-input" placeholder="Energy" id="vacEnergy" value="1"> MeV
+                                            <input style="display:inline;width:50%;" type="number" class="form-control border-input" placeholder="Energy" id="vacEnergy" value="1"> MeV
                                         </div>
                                     </div>
                                     <div class="col-md-3">
                                         <div class="form-group">
                                             <label style="display:block;">Mass Squared Difference</label>
-                                            <input style="display:inline;width:50%;" type="text" class="form-control border-input" placeholder="Mass Squared Difference" id="vacMassSquared" value=7.53> ×10<sup>-5</sup>eV<sup>2</sup>
+                                            <input style="display:inline;width:50%;" type="number" class="form-control border-input" placeholder="Mass Squared Difference" id="vacMassSquared" value=7.53> ×10<sup>-5</sup>eV<sup>2</sup>
                                         </div>
                                     </div>
                                     <div class="col-md-3">
@@ -304,7 +304,7 @@
                                     <hr>
                                     <div class="stats">
                                         <i class="ti-info"></i> Calculated Using Analytical Formula. $
-                                            P(x) = \sin^2(2\theta_v) \sin^2\left( \delta m^2 x\big/4E \right)$, which is starting from electron flavor.
+                                            P(x) = \sin^2(2\theta_v) \sin^2\left( \delta m^2 x\big/4E \right)$.
                                     </div>
                                 </div>
                             </div>
