added data file json data

--- a/about.html
+++ b/about.html
@@ -50,25 +50,26 @@
             <ul class="nav">
                 <li>
                     <a href="index.html">
-                        <i class="ti-loop"></i>
                         <p>Vacuum Oscillations</p>
                     </a>
                 </li>
                 <li>
+                    <a href="vacuum3.html">
+                        <p>Vacuum Oscillations (3)</p>
+                    </a>
+                </li>
+                <li>
                     <a href="matter.html">
-                        <i class="ti-loop"></i>
                         <p>Oscillations in Matter</p>
                     </a>
                 </li>
                 <li>
                     <a href="misc.html">
-                        <i class="ti-package"></i>
                         <p>MISC</p>
                     </a>
                 </li>
                 <li class="active">
                     <a href="about.html">
-                        <i class="ti-pulse"></i>
                         <p>About</p>
                     </a>
                 </li>
