--- a/matter.html
+++ b/matter.html
@@ -82,27 +82,28 @@
             </div>
 
             <ul class="nav">
-                <li class="active">
+                <li>
                     <a href="index.html">
-                        <i class="ti-loop"></i>
-                        <p>Vacuum Oscillations</p>
+                        <p>Vacuum Oscillations (2)</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="vacuum3.html">
+                        <p>Vacuum Oscillations (3)</p>
                     </a>
                 </li>
                 <li class="active">
                     <a href="matter.html">
-                        <i class="ti-loop"></i>
                         <p>Oscillations in Matter</p>
                     </a>
                 </li>
                 <li>
                     <a href="misc.html">
-                        <i class="ti-package"></i>
                         <p>MISC</p>
                     </a>
                 </li>
                 <li>
                     <a href="about.html">
-                        <i class="ti-pulse"></i>
                         <p>About</p>
                     </a>
                 </li>
