--- a/misc.html
+++ b/misc.html
@@ -29,6 +29,34 @@
     <link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
     <link href="assets/css/themify-icons.css" rel="stylesheet">
 
+    <!--   Core JS Files   -->
+    <script src="assets/js/jquery-1.10.2.js" type="text/javascript"></script>
+	<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
+
+
+        <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+
+        <script type="text/x-mathjax-config">
+          MathJax.Hub.Config({
+            showProcessingMessages: false,
+            messageStyle: 'none',
+            tex2jax: {
+              inlineMath: [['$','$']],
+              displayMath: [['$$','$$']],
+              processEnvironments: false
+            },
+            TeX: {
+              equationNumbers: {
+                autoNumber: "AMS"
+              }
+            },
+            'HTML-CSS': {
+              imageFont: null
+            }
+          });
+        </script>
+
+
 </head>
 <body>
 
@@ -50,25 +78,26 @@
             <ul class="nav">
                 <li>
                     <a href="index.html">
-                        <i class="ti-loop"></i>
-                        <p>Vacuum Oscillations</p>
+                        <p>Vacuum Oscillations (2)</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="vacuum3.html">
+                        <p>Vacuum Oscillations (3)</p>
                     </a>
                 </li>
                 <li>
                     <a href="matter.html">
-                        <i class="ti-loop"></i>
                         <p>Oscillations in Matter</p>
                     </a>
                 </li>
                 <li class="active">
                     <a href="misc.html">
-                        <i class="ti-package"></i>
                         <p>MISC</p>
                     </a>
                 </li>
                 <li>
                     <a href="about.html">
-                        <i class="ti-pulse"></i>
                         <p>About</p>
                     </a>
                 </li>
@@ -146,6 +175,101 @@
                         </div>
                     </div>
                 </div>
+
+
+                <div class="card">
+                    <div class="header">
+                        <h4 class="title">Neutrino Mixing Data</h4>
+                        <p class="category"><a href="https://raw.githubusercontent.com/NeuPhysics/neutrino-data/master/mixing.json">JSON Data</a> on <a href="https://github.com/NeuPhysics/neutrino-data/blob/master/mixing.json">GitHub</a></p>
+                    </div>
+                    <div class="content">
+                        <div class="col-md-12">
+                        <a class="btn btn-default btn-block" href="http://pdglive.lbl.gov/Particle.action?node=S067">Neutrino Mixing Data on PDGLive</a>
+                    </div>
+                    </div>
+                    <div class="content">
+                        <div class="places-buttons">
+                            <div class="row">
+                                <div class="col-md-9">
+                                    <h5>Data Table
+                                        <p class="category">Data Table Generated From <a href="https://github.com/NeuPhysics/neutrino-data/blob/master/mixing.json">JSON File</a></p>
+                                    </h5>
+                                </div>
+                            </div>
+                            <div class="row">
+
+
+
+
+                                <div class="col-md-12">
+
+
+                                    <div class="content table-responsive table-full-width">
+                                        <table class="table table-striped">
+
+                                            <thead>
+                                                <th>KEY</th>
+                                                <th>VALUE</th>
+                                            </thead>
+                                            <tbody id="neutrino-mixing-data">
+
+
+
+                                            </tbody>
+                                        </table>
+                                    </div>
+
+
+                                <script>
+
+                                var url = 'https://raw.githubusercontent.com/NeuPhysics/neutrino-data/master/mixing.json';
+
+                                var nuDataDict = {};
+                                $.getJSON(url, function(json){
+
+                                    $.each( json, function( key, val ) {
+                                        nuDataDict[key] = val;
+                                    });
+
+                                    console.log( nuDataDict );
+
+                                    nuDataTableHtml = ["<tr> <td> Flavors" + "</td> <td> " + nuDataDict['flavors'] + " </td> </tr>"
+                                    ,
+                                    "<tr> <td>$\\Delta m_{21}^2$</td> <td> $" + nuDataDict['mass-squared-difference-tex']['21'] + "$ </td> </tr>"
+                                    ,
+                                    "<tr> <td>$\\Delta m_{32}^2$" + "</td> <td> $" + nuDataDict['mass-squared-difference-tex']['32'] + "$ </td> </tr>"
+                                    ,
+                                    "<tr> <td>$\\sin^2(2\\theta_{12})$" + "</td> <td> $" + nuDataDict['mixing-angles-sin2theta-squared-tex']['12'] + "$ </td> </tr>"
+                                    ,
+                                    "<tr> <td>$\\sin^2(2\\theta_{13})$" + "</td> <td> $" + nuDataDict['mixing-angles-sin2theta-squared-tex']['13'] + "$ </td> </tr>"
+                                    ,
+                                    "<tr> <td>$\\sin^2(2\\theta_{23})$" + "</td> <td> $" + nuDataDict['mixing-angles-sin2theta-squared-tex']['23'] + "$ </td> </tr>"
+                                    ]
+
+
+
+
+
+
+                                    $(nuDataTableHtml.join()).appendTo("#neutrino-mixing-data")
+
+                                    });
+
+
+
+                                </script>
+
+
+
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+
+
             </div>
         </div>
 
@@ -180,9 +304,6 @@
 
 </body>
 
-    <!--   Core JS Files   -->
-    <script src="assets/js/jquery-1.10.2.js" type="text/javascript"></script>
-	<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
 
 	<!--  Checkbox, Radio & Switch Plugins -->
 	<script src="assets/js/bootstrap-checkbox-radio.js"></script>
@@ -193,8 +314,7 @@
     <!--  Notifications Plugin    -->
     <script src="assets/js/bootstrap-notify.js"></script>
 
-    <!--  Google Maps Plugin    -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+
 
     <!-- Paper Dashboard Core javascript and methods for Demo purpose -->
 	<script src="assets/js/paper-dashboard.js"></script>
