update MISC for formulae about oscillations

--- a/matter.html
+++ b/matter.html
@@ -158,8 +158,8 @@
                     <div class="col-md-12">
                         <div class="card">
                             <div class="header">
-                                <h4 class="title">Two Flavor Oscillations: Survival Probability</h4>
-                                <p class="category">Vacuum Oscillations</p>
+                                <h4 class="title">Two Flavor Oscillations in Matter (Adiabatic): Survival Probability</h4>
+                                <p class="category">Read about the theoretical formula <a href="misc.html#oscillations-in-matter-adiabatic">here</a>.</p>
                             </div>
                             <div class="content">
 
@@ -192,8 +192,8 @@
                                     </div>
                             </div>
 
-                            <div id="vacuum-oscillation" class="plot"></div>
-                            <div id="vacuum-oscillation-mass-eigenstate" class="plot"></div>
+                            <!-- <div id="vacuum-oscillation" class="plot"></div>
+                            <div id="vacuum-oscillation-mass-eigenstate" class="plot"></div> -->
 
 
                             <script id="vacuum-oscillation-javascript">
@@ -297,8 +297,7 @@
                                     </div>
                                     <hr>
                                     <div class="stats">
-                                        <i class="ti-info"></i> Calculated Using Analytical Formula. $
-                                            P(x) = \sin^2(2\theta_v) \sin^2\left( \delta m^2 x\big/4E \right)$, which is starting from electron flavor.
+                                        <i class="ti-info"></i> Calculated Using Analytical Formula Derived <a href="misc.html#oscillations-in-matter-adiabatic">HERE</a>.
                                     </div>
                                 </div>
                             </div>
