--- a/misc.html
+++ b/misc.html
@@ -33,6 +33,57 @@
     <script src="assets/js/jquery-1.10.2.js" type="text/javascript"></script>
 	<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
 
+        <script type="text/x-mathjax-config">
+      MathJax.Hub.Config({ TeX: { extensions: ["color.js","cancel.js", "AMSmath.js", "AMSsymbols.js"] }});
+    </script>
+    <script type="text/x-mathjax-config">
+    MathJax.Hub.Register.StartupHook("TeX Jax Ready",function () {
+      MathJax.Hub.Insert(MathJax.InputJax.TeX.Definitions.macros,{
+        cancel: ["Extension","cancel"]
+        });
+     });
+     </script>
+    <script type="text/x-mathjax-config">
+      MathJax.Hub.Config({
+        tex2jax: {
+          skipTags: ['script', 'noscript', 'style', 'textarea', 'pre', 'code']
+        }
+      });
+    </script>
+    <script type="text/x-mathjax-config">
+      MathJax.Hub.Queue(function() {
+          var all = MathJax.Hub.getAllJax(), i;
+          for(i=0; i < all.length; i += 1) {
+              all[i].SourceElement().parentNode.className += ' has-jax';
+          }
+      });
+    </script>
+    <script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+      tex2jax: {
+        processEscapes: true
+      }
+    });
+    </script>
+    <script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+      TeX: {
+        Macros: {
+          overlr: ['\\overset\\leftrightarrow{\#1}',1],
+          overl: ['\\overset\leftarrow{\#1}',1],
+          overr: ['\\overset\rightarrow{\#1}',1],
+          bra: ['\\left\\langle \#1\\right|',1],
+          ket: ['\\left| \#1\\right\\rangle',1],
+          braket: ['\\langle \#1 \\mid \#2 \\rangle',2],
+          avg: ['\\left< \#1 \\right>',1],
+          slashed: ['\\cancel{\#1}',1],
+          bold: ['\\boldsymbol{\#1}',1],
+          sech: ['\\operatorname{sech}{\#1}',1],
+          csch: ['\\operatorname{csch}{\#1}',1]
+        }
+      }
+    });
+    </script>
 
         <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
@@ -173,6 +224,106 @@
                             </div>
 
                         </div>
+
+                        <div class="places-buttons">
+                            <div class="row">
+                                <div class="col-md-9">
+                                    <h5 id="oscillations-in-matter-adiabatic">Oscillations in Matter (Adiabatic Transitions)
+                                        <p class="category">Oscillation Formula</p>
+                                    </h5>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <p>
+                                    Since adiabatic, no transitions happen between two instantaneous mass eigenstates.</p>
+                                    <p>
+                                    So to calculate the transition probability we only need to:
+                                    <ul>
+                                        <li>Calculate the matrix that rotates the system from instataneous mass states to flavor states;
+                                            $$
+                                            \begin{pmatrix}
+                                                \ket{\nu_{\mathrm{e}}} \\
+                                                \ket{\nu_{\mathrm{x}}}
+                                                \end{pmatrix} = \begin{pmatrix}
+                                                \cos \theta_{\mathrm{m}} & \sin \theta_{\mathrm{m}} \\
+                                                -\sin \theta_{\mathrm{m}} & \cos \theta_{\mathrm{m}}
+                                                \end{pmatrix}
+                                                \begin{pmatrix}
+                                                \ket{\nu_{\mathrm{L}}}\\
+                                                \ket{\nu_{\mathrm{H}}}
+                                                \end{pmatrix},
+                                            $$
+                                            where
+                                            $$
+                                            \tan 2\theta_m = \frac{\sin 2\theta_v}{\cos 2\theta_v - \lambda/\omega_v}.
+                                            $$
+
+                                        </li>
+                                        <li>Calculate the initial distribution on the two instataneous mass states. Given initial condition as flavor states
+                                            $$
+                                            \begin{pmatrix}
+                                            \psi_{\mathrm{e}} \\
+                                            \psi_{\mathrm{x}}
+                                            \end{pmatrix} = \begin{pmatrix}
+                                            \psi_{\mathrm{e}}(0) \\
+                                            \psi_{\mathrm{x}}(0)
+                                            \end{pmatrix} =
+                                            \begin{pmatrix}
+                                            \text{psie0} \\
+                                            \text{psix0}
+                                            \end{pmatrix}.
+                                            $$
+
+                                        The instantaneous mass states are
+                                            $$
+                                            \begin{pmatrix}
+                                            \text{psiL0}\\
+                                            \text{psiH0}
+                                            \end{pmatrix} = \begin{pmatrix}
+                                            \cos \theta_{\mathrm{m}}(0) & -\sin \theta_{\mathrm{m}}(0) \\
+                                            \sin \theta_{\mathrm{m}}(0) & \cos \theta_{\mathrm{m}}(0)
+                                            \end{pmatrix}\begin{pmatrix}
+                                            \text{psie0} \\
+                                            \text{psix0}
+                                            \end{pmatrix} =
+                                            \begin{pmatrix}
+                                            \cos \theta_m(0) \text{psie0} - \sin \theta_m(0) \text{psix0} \\
+                                            \sin\theta_m(0) \text{psie0} + \cos \theta_m(0) \text{psix0}
+                                            \end{pmatrix}
+                                            $$
+
+                                        </li>
+                                        <li>Calculate the flavor states from the instatenous mass states.
+                                            $$
+                                            \begin{pmatrix}
+                                            \ket{\nu_{\mathrm{e}}}\\
+                                            \ket{\nu_{\mathrm{x}}}
+                                            \end{pmatrix} = \begin{pmatrix}
+                                            \cos\theta_m & \sin \theta_m \\
+                                            -\sin\theta_m & \cos \theta_m
+                                            \end{pmatrix}\begin{pmatrix}
+                                            \text{psiL0}\\
+                                            \text{psiH0}
+                                            \end{pmatrix} = \begin{pmatrix}
+                                            \cos\theta_{\mathrm{m}}\text{psiL0} + \sin \theta_{\mathrm{m}}\text{psiH0} \\
+                                            -\sin\theta_{\mathrm{m}} \text{psiL0} + \cos\theta_{\mathrm{m}} \text{psiH0}
+                                            \end{pmatrix}
+                                            $$
+                                        </li>
+                                        <li>What can also be calculated is the energy split between the two instantaneous mass states
+                                            $$
+                                            \omega_{\mathrm m}(x) = \omega_{\mathrm v} \sqrt{ (\lambda(x)/\omega_{\mathrm v} - \cos \left(2\theta_{\mathrm v} \right) )^2 + \sin^2\left( 2\theta_v \right) }
+                                            $$
+                                        </li>
+                                    </ul>
+                                    </p>
+                                    <p>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
 
@@ -319,8 +470,7 @@
     <!-- Paper Dashboard Core javascript and methods for Demo purpose -->
 	<script src="assets/js/paper-dashboard.js"></script>
 
-	<!-- Paper Dashboard DEMO methods, don't include it in your project! -->
-	<script src="assets/js/demo.js"></script>
+
 
     <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
