vue.js+plotly.js

--- a/about.html
+++ b/about.html
@@ -53,12 +53,7 @@
                         <p>Vacuum Oscillations</p>
                     </a>
                 </li>
-                <li>
-                    <a href="vacuum3.html">
-                        <p>Vacuum Oscillations (3)</p>
-                    </a>
-                </li>
-                <li>
+               <li>
                     <a href="matter.html">
                         <p>Oscillations in Matter</p>
                     </a>
@@ -87,7 +82,7 @@
                         <span class="icon-bar bar2"></span>
                         <span class="icon-bar bar3"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Vacuum Oscillations</a>
+                    <a class="navbar-brand" href="#">About</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
