--- a/index.html
+++ b/index.html
@@ -88,11 +88,6 @@
                     </a>
                 </li>
                 <li>
-                    <a href="vacuum3.html">
-                        <p>Vacuum Oscillations (3)</p>
-                    </a>
-                </li>
-                <li>
                     <a href="matter.html">
                         <p>Oscillations in Matter</p>
                     </a>
@@ -121,7 +116,7 @@
                         <span class="icon-bar bar2"></span>
                         <span class="icon-bar bar3"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Vacuum Oscillations</a>
+                    <a class="navbar-brand" href="#">Vacuum Oscillations with Two Flavors</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
@@ -164,137 +159,62 @@
                             <div class="content">
 
 
-                            <!-- Input Parameters BEGIN -->
-                            <div class="row">
-                                    <div class="col-md-3">
-                                        <div class="form-group">
-                                            <label style="display:block;">Energy of Neutrinos</label>
-                                            <input style="display:inline;width:50%;" type="number" class="form-control border-input" placeholder="Energy" id="vacEnergy" value="1"> MeV
-                                        </div>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <div class="form-group">
-                                            <label style="display:block;">Mass Squared Difference</label>
-                                            <input style="display:inline;width:50%;" type="number" class="form-control border-input" placeholder="Mass Squared Difference" id="vacMassSquared" value=7.53> ×10<sup>-5</sup>eV<sup>2</sup>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <div class="form-group">
-                                            <label style="display:block;">Vacuum Mixing Angle</label>
-                                            <input style="display:inline;width:50%;" type="number" class="form-control border-input" placeholder="Mixing Angle" id="vacMixingAngle" value="0.59"> RAD
-                                        </div>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <div class="form-group">
-                                            <label style="display:block;">Initial $\nu_e$ Probability</label>
-                                            <input style="display:inline;width:50%;" type="number" class="form-control border-input" placeholder="Electron Flavor" id="vacInitialElectronFlavor" value="1">
-                                        </div>
-                                    </div>
-                            </div>
-
-                            <div id="vacuum-oscillation" class="plot"></div>
-                            <div class="chart-legend" style="text-align:center;">
-                                <span style="color:#0074D9;"><i class="fa fa-circle"></i>$\nu_e$ Probability</span>
-                                <span style="color:red;"><i class="fa fa-circle"></i>$\nu_x$ Probability</span>
-                            </div>
-                            <div id="vacuum-oscillation-mass-eigenstate" class="plot"></div>
-                            <div class="chart-legend" style="text-align:center;">
-                                <span style="color:#0074D9;"><i class="fa fa-circle"></i>$\nu_1$ Probability</span>
-                                <span style="color:red;"><i class="fa fa-circle"></i>$\nu_2$ Probability</span>
-                            </div>
 
 
-                            <script id="vacuum-oscillation-javascript">
-
-                            function plotvac() {
-
-                              var vacEnergyValue = document.getElementById("vacEnergy").value;
-                              var vacMassSquaredValue = document.getElementById("vacMassSquared").value;
-                              var vacMixingAngleValue = document.getElementById("vacMixingAngle").value;
-                              var vacInitialElectronFlavorValue = document.getElementById("vacInitialElectronFlavor").value;
-
-                              var vacOscLength = 2*parseFloat(vacEnergyValue)*4.0*197.0/(10^6 * parseFloat(vacMassSquaredValue) );
-
-                              var vaca = Math.sqrt(vacInitialElectronFlavorValue);
-                              var vacb = Math.sqrt(1 - vaca);
-
-                              vacFES = functionPlot({
-                                title: 'Vacuum Oscillations Flavor Eigenstates' ,
-                                target: '#vacuum-oscillation',
-                                tip: {
-                                xLine: true,    // dashed line parallel to y = 0
-                                yLine: true,    // dashed line parallel to x = 0
-                                renderer: function (x, y, index) {
-                                  // the returning value will be shown in the tip
-                                  }
-                                },
-                                width: 800,
-                                height: 600,
-                                xAxis: {
-                                  label: 'Distance (km)',
-                                  domain: [0,vacOscLength]
-                                },
-                                yAxis: {
-                                  label: 'Survival Probability',
-                                  domain: [0,1]
-                                },
-                                grid: true,
-                                data: [
-                                    {
-                                  //fn: vacInitialElectronFlavorValue+'*(1 - sin(2*'+vacMixingAngleValue+')^2'+'* sin(2*'+vacMassSquaredValue+'*10^(-5-12)*x*10^(18)/(197*4*'+vacEnergyValue+'))^2 )', color:'#0074D9'
-                                  fn: vaca+'^2*(cos('+vacMixingAngleValue+')^4+sin('+vacMixingAngleValue+')^4)+'+vacb+'^2*sin(2*'+vacMixingAngleValue+')^2/2-'+vaca+'*'+vacb+'*sin(2*'+vacMixingAngleValue+')*cos(2*'+vacMixingAngleValue+')+('+vaca+'^2/2*sin(2*'+vacMixingAngleValue+')^2-'+vacb+'^2/2*sin(2*'+vacMixingAngleValue+')^2+'+vaca+'*'+vacb+'*sin(2*'+vacMixingAngleValue+')*cos(2*'+vacMixingAngleValue+'))*cos(4*'+vacMassSquaredValue+'*10^(-5-12)*x*10^(18)/(197*4*'+vacEnergyValue+'))', color:'#0074D9'
-                              },
-                                {
-                                  //fn: '( sin(2*'+vacMixingAngleValue+')^2'+'* sin(2*'+vacMassSquaredValue+'*10^(-5-12)*x*10^(18)/(197*4*'+vacEnergyValue+'))^2 )', color:'red'
-                                  fn: '1-('+vaca+'^2*(cos('+vacMixingAngleValue+')^4+sin('+vacMixingAngleValue+')^4)+'+vacb+'^2*sin(2*'+vacMixingAngleValue+')^2/2-'+vaca+'*'+vacb+'*sin(2*'+vacMixingAngleValue+')*cos(2*'+vacMixingAngleValue+')+('+vaca+'^2/2*sin(2*'+vacMixingAngleValue+')^2-'+vacb+'^2/2*sin(2*'+vacMixingAngleValue+')^2+'+vaca+'*'+vacb+'*sin(2*'+vacMixingAngleValue+')*cos(2*'+vacMixingAngleValue+'))*cos(4*'+vacMassSquaredValue+'*10^(-5-12)*x*10^(18)/(197*4*'+vacEnergyValue+')))', color:'red'
-                                }
-                                ]
-                              });
-
-                              vacMES = functionPlot({
-                                title: 'Vacuum Oscillations Mass Eigenstates' ,
-                                target: '#vacuum-oscillation-mass-eigenstate',
-                                tip: {
-                                xLine: true,    // dashed line parallel to y = 0
-                                yLine: true,    // dashed line parallel to x = 0
-                                renderer: function (x, y, index) {
-                                  // the returning value will be shown in the tip
-                                  }
-                                },
-                                width: 800,
-                                height: 600,
-                                xAxis: {
-                                  label: 'Distance (km)',
-                                  domain: [0,vacOscLength]
-                                },
-                                yAxis: {
-                                  label: 'Survival Probability',
-                                  domain: [0,1]
-                                },
-                                grid: true,
-                                data: [
-                                    {
-                                  fn: vaca+'^2*cos('+vacMixingAngleValue+')^2+'+vacb+'^2*sin('+vacMixingAngleValue+')^2-sin(2*'+vacMixingAngleValue+')*'+vaca+'*'+vacb, color:'#0074D9'
-                              },
-                                {
-                                  //fn: '( sin(2*'+vacMixingAngleValue+')^2'+'* sin(2*'+vacMassSquaredValue+'*10^(-5-12)*x*10^(18)/(197*4*'+vacEnergyValue+'))^2 )', color:'red'
-                                  fn: '1-('+vaca+'^2*cos('+vacMixingAngleValue+')^2+'+vacb+'^2*sin('+vacMixingAngleValue+')^2-sin(2*'+vacMixingAngleValue+')*'+vaca+'*'+vacb+')', color:'red'
-                                }
-                                ]
-                              });
-                              vacFES.addLink(vacMES)
-                              vacMES.addLink(vacFES)
-                            }
 
 
-                            plotvac()
+<!-- VUE PLOTS -->
+<div class="vacuum">
 
-                            vacEnergy.addEventListener("input", plotvac)
-                            vacMassSquared.addEventListener("input", plotvac)
-                            vacMixingAngle.addEventListener("input", plotvac)
-                            vacInitialElectronFlavor.addEventListener("input", plotvac)
+	<div class="row">
+			  <div class="col-md-3">
+					<div class="form-group">
+						 <label style="display:block;">Energy of Neutrinos</label>
+						 <input style="display:inline;width:50%;" type="number" class="form-control border-input" placeholder="1" id="vacEnergy" v-model.number="energy"> MeV
+					</div>
+			  </div>
+			  <div class="col-md-3">
+					<div class="form-group">
+						 <label style="display:block;">Mass Squared Difference</label>
+						 <input style="display:inline;width:50%;" type="number" class="form-control border-input" placeholder="7.53" id="vacMassSquared" v-model.number="masssquared"> ×10<sup>-5</sup>eV<sup>2</sup>
+					</div>
+			  </div>
+			  <div class="col-md-3">
+					<div class="form-group">
+						 <label style="display:block;">Vacuum Mixing Angle</label>
+						 <input style="display:inline;width:50%;" type="number" class="form-control border-input" placeholder="0.59" id="vacMixingAngle" v-model.number="mixangle"> RAD
+					</div>
+			  </div>
+			  <!-- <div class="col-md-3">
+					<div class="form-group">
+						 <label style="display:block;">Initial $\nu_e$ Probability</label>
+						 <input style="display:inline;width:50%;" type="number" class="form-control border-input" placeholder="1" id="vacInitialElectronFlavor" v-model.number="initstate">
+					</div>
+			  </div> -->
+			  <div class="col-md-3">
+					<div class="form-group">
+						 <label style="display:block;">End Point</label>
+						 <input style="display:inline;width:50%;" type="number" class="form-control border-input" placeholder="10" id="vacEnd" v-model.number="endpoint">
+					</div>
+			  </div>
 
-                            </script>
+	</div>
+
+
+  <div style="text-align:center;">
+     <hr>
+	  <button v-on:click="execplot" class="ti-stats-up btn btn-primary btn-round"> Plot </button>
+     <hr>
+	</div>
+
+  <div id="vacuum-oscillations-plot"></div>
+
+
+<!-- VUE PLOTS END -->
+
+
+
+
 
                                 <!-- Input Parameters END -->
 
@@ -344,6 +264,15 @@
 
 
 </body>
+
+	<!-- <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.4.4/vue.min.js'></script> -->
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.2/vue.js'></script>
+	<!-- <script src='https://unpkg.com/vue-chartjs@2.8.7/dist/vue-chartjs.full.min.js'></script> -->
+
+	<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
+  	<script  src="assets/vue/vacuum.js"></script>
+
 
     <!--   Core JS Files   -->
     <script src="assets/js/jquery-1.10.2.js" type="text/javascript"></script>
