update index: added axis labels and units

--- a/matter.html
+++ b/matter.html
@@ -186,16 +186,16 @@
 						 <input style="display:inline;width:50%;" type="number" class="form-control border-input" placeholder="0.59" id="vacMixingAngle" v-model.number="mixangle"> RAD
 					</div>
 			  </div>
-			  <!-- <div class="col-md-3">
+			  <div class="col-md-3">
 					<div class="form-group">
-						 <label style="display:block;">Initial $\nu_e$ Probability</label>
-						 <input style="display:inline;width:50%;" type="number" class="form-control border-input" placeholder="1" id="vacInitialElectronFlavor" v-model.number="initstate">
+						 <label style="display:block;">Electron Number Density</label>
+						 <input style="display:inline;width:50%;" type="number" class="form-control border-input" placeholder="1" id="vacInitialElectronFlavor" v-model.number="initstate"> $m^{-3}$
 					</div>
-			  </div> -->
+			  </div>
 			  <div class="col-md-3">
 					<div class="form-group">
 						 <label style="display:block;">End Point</label>
-						 <input style="display:inline;width:50%;" type="number" class="form-control border-input" placeholder="10" id="vacEnd" v-model.number="endpoint">
+						 <input style="display:inline;width:50%;" type="number" class="form-control border-input" placeholder="10" id="vacEnd" v-model.number="endpoint"> km
 					</div>
 			  </div>
 
