--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 			  <div class="col-md-3">
 					<div class="form-group">
 						 <label style="display:block;">End Point</label>
-						 <input style="display:inline;width:50%;" type="number" class="form-control border-input" placeholder="10" id="vacEnd" v-model.number="endpoint">
+						 <input style="display:inline;width:50%;" type="number" class="form-control border-input" placeholder="10" id="vacEnd" v-model.number="endpoint"> km
 					</div>
 			  </div>
 
