--- a/index.html
+++ b/index.html
@@ -1,324 +1,299 @@
 <!doctype html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8" />
 	<link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
 	<link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicon.png">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-	<title>Neutrino Oscillations JS</title>
+	<title>Neutrino Physics | Neutrino Physics with Javascript</title>
 
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-    <meta name="viewport" content="width=device-width" />
+	<meta name="viewport" content="width=device-width" />
 
 
-    <!-- Bootstrap core CSS     -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+	<!-- Bootstrap core CSS     -->
+	<link href="assets/css/bootstrap.min.css" rel="stylesheet" />
 
-    <!-- Animation library for notifications   -->
-    <link href="assets/css/animate.min.css" rel="stylesheet"/>
+	<!-- Animation library for notifications   -->
+	<link href="assets/css/animate.min.css" rel="stylesheet" />
 
-    <!--  Paper Dashboard core CSS    -->
-    <link href="assets/css/paper-dashboard.css" rel="stylesheet"/>
-
-
+	<!--  Paper Dashboard core CSS    -->
+	<link href="assets/css/paper-dashboard.css" rel="stylesheet" />
 
 
-    <!--  Fonts and icons     -->
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
-    <link href="assets/css/themify-icons.css" rel="stylesheet">
 
 
-<script type="text/javascript" async
-  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML">
-</script>
+	<!--  Fonts and icons     -->
+	<link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
+	<link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
+	<link href="assets/css/themify-icons.css" rel="stylesheet">
 
-    <script type="text/x-mathjax-config">
-      MathJax.Hub.Config({
-        showProcessingMessages: false,
-        messageStyle: 'none',
-        tex2jax: {
-          inlineMath: [['$','$']],
-          displayMath: [['$$','$$']],
-          processEnvironments: false
-        },
-        TeX: {
-          equationNumbers: {
-            autoNumber: "AMS"
-          }
-        },
-        'HTML-CSS': {
-          imageFont: null
-        }
-      });
-    </script>
 
-    <!-- Functionplot and d3 END -->
+	<script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML">
+	</script>
 
-    <!-- Neutrino Specific END -->
-    <link href="assets/neutrino/neutrino.css" rel="stylesheet">
-    <!-- Neutrino Specific END -->
+	<script type="text/x-mathjax-config">
+		MathJax.Hub.Config({ showProcessingMessages: false, messageStyle: 'none', tex2jax: { inlineMath: [['$','$']], displayMath: [['$$','$$']], processEnvironments: false }, TeX: { equationNumbers: { autoNumber: "AMS" } }, 'HTML-CSS': { imageFont: null } });
+	</script>
+
+	<!-- Functionplot and d3 END -->
+
+	<!-- Neutrino Specific END -->
+	<link href="assets/neutrino/neutrino.css" rel="stylesheet">
+	<!-- Neutrino Specific END -->
 
 
 
 </head>
+
 <body>
 
-<div class="wrapper">
-    <div class="sidebar" data-background-color="black" data-active-color="success">
+	<div class="wrapper">
+		<div class="sidebar" data-background-color="black" data-active-color="success">
 
-    <!--
+			<!--
 		Tip 1: you can change the color of the sidebar's background using: data-background-color="white | black"
 		Tip 2: you can change the color of the active button using the data-active-color="primary | info | success | warning | danger"
 	-->
 
-    	<div class="sidebar-wrapper">
-            <div class="logo">
-                <a href="#" class="simple-text">
-                    Neutrino Oscillation JavaScript
+			<div class="sidebar-wrapper">
+				<div class="logo">
+					<a href="#" class="simple-text">
+                    Neutrino Physics with JavaScript
                 </a>
-            </div>
+				</div>
 
-            <ul class="nav">
-                <li class="active">
-                    <a href="index.html">
-                        <p>Vacuum Oscillations (2)</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="matter.html">
-                        <p>Oscillations in Matter</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="misc.html">
-                        <p>MISC</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="about.html">
-                        <p>About</p>
-                    </a>
-                </li>
-            </ul>
-    	</div>
-    </div>
+				<ul class="nav">
+					<li class="active">
+						<a href="index.html">
+							<p>Home</p>
+						</a>
+					</li>
+					<li>
+						<a href="vacuum.html">
+							<p>Oscillations in Vacuum</p>
+						</a>
+					</li>
+					<li>
+						<a href="matter.html">
+							<p>Oscillations in Matter</p>
+						</a>
+					</li>
+					<li>
+						<a href="toolbox.html">
+							<p>Toolbox</p>
+						</a>
+					</li>
+					<li>
+						<a href="misc.html">
+							<p>MISC</p>
+						</a>
+					</li>
+					<li>
+						<a href="about.html">
+							<p>About</p>
+						</a>
+					</li>
+				</ul>
+			</div>
+		</div>
 
-    <div class="main-panel">
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle">
+		<div class="main-panel">
+			<nav class="navbar navbar-default">
+				<div class="container-fluid">
+					<div class="navbar-header">
+						<button type="button" class="navbar-toggle">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar bar1"></span>
                         <span class="icon-bar bar2"></span>
                         <span class="icon-bar bar3"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Vacuum Oscillations with Two Flavors</a>
-                </div>
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li>
-                            <a href="https://github.com/NeuPhysics/neutrino-oscillation-js">
+						<a class="navbar-brand" href="#">Neutrino Physics with Javascript</a>
+					</div>
+					<div class="collapse navbar-collapse">
+						<ul class="nav navbar-nav navbar-right">
+							<li>
+								<a href="https://github.com/NeuPhysics/neutrino-oscillation-js">
                                 <i class="ti-github"></i>
 								<p>GitHub</p>
                             </a>
-                        </li>
-                        <li class="dropdown">
-                              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+							</li>
+							<li class="dropdown">
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                     <i class="ti-infinite"></i>
                                     <p class="notification"></p>
 									<p>Neutrino Physics</p>
 									<b class="caret"></b>
                               </a>
-                              <ul class="dropdown-menu">
-                                <li><a href="http://docs.neutrino.xyz/">Neutrino Notes</a></li>
-                                <li><a href="http://neutrino.xyz/neutrino-map/">Neutrino Map</a></li>
-                                <li><a href="https://github.com/NeuPhysics/neupackage">Neutrino Packages</a></li>
-                                <li><a href="https://github.com/NeuPhysics">NeuPhysics @ GitHub</a></li>
-                              </ul>
-                        </li>
-                    </ul>
+								<ul class="dropdown-menu">
+									<li><a href="http://docs.neutrino.xyz/">Neutrino Notes</a></li>
+									<li><a href="http://neutrino.xyz/neutrino-map/">Neutrino Map</a></li>
+									<li><a href="https://github.com/NeuPhysics/neupackage">Neutrino Packages</a></li>
+									<li><a href="https://github.com/NeuPhysics">NeuPhysics @ GitHub</a></li>
+								</ul>
+							</li>
+						</ul>
 
-                </div>
-            </div>
-        </nav>
-
-
-        <div class="content">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="card">
-                            <div class="header">
-                                <h4 class="title">Two Flavor Oscillations: Survival Probability</h4>
-                                <p class="category">Vacuum Oscillations</p>
-                            </div>
-                            <div class="content">
-
-
-
-
-
-
-<!-- VUE PLOTS -->
-<div class="vacuum">
-
-	<div class="row">
-			  <div class="col-md-3">
-					<div class="form-group">
-						 <label style="display:block;">Energy of Neutrinos</label>
-						 <input style="display:inline;width:50%;" type="number" class="form-control border-input" placeholder="1" id="vacEnergy" v-model.number="energy"> MeV
 					</div>
-			  </div>
-			  <div class="col-md-3">
-					<div class="form-group">
-						 <label style="display:block;">Mass Squared Difference</label>
-						 <input style="display:inline;width:50%;" type="number" class="form-control border-input" placeholder="7.53" id="vacMassSquared" v-model.number="masssquared"> ×10<sup>-5</sup>eV<sup>2</sup>
+				</div>
+			</nav>
+
+
+			<div class="content">
+				<div class="container-fluid">
+					<div class="row">
+						<div class="col-md-12">
+							<div class="card">
+								<div class="header">
+									<h4 class="title">Neutrino Physics is Fun</h4>
+									<p class="category">Guaranteed</p>
+								</div>
+								<div class="content">
+
+
+
+
+									<div>
+										<a href="vacuum.html"><button class="ti-stats-up btn btn-primary btn-round"> Neutrino Oscillations in Vacuum </button></a>
+
+
+
+									</div>
+
+
+
+
+
+
+
+
+								</div>
+							</div>
+
+							<div class="card">
+								<!-- <div class="header">
+									<h4 class="title">Neutrino Physics is Fun</h4>
+									<p class="category">Guaranteed</p>
+								</div> -->
+								<div class="content">
+
+									<a href="matter.html"><button class="ti-stats-up btn btn-primary btn-round"> Neutrino Oscillations in Matter </button></a>
+								</div>
+							</div>
+
+							<div class="card">
+								<!-- <div class="header">
+									<h4 class="title">Neutrino Physics is Fun</h4>
+									<p class="category">Guaranteed</p>
+								</div> -->
+								<div class="content">
+
+									<a href="matter.html"><button class="ti-stats-up btn btn-primary btn-round"> Some Tools </button></a>
+								</div>
+							</div>
+
+						</div>
 					</div>
-			  </div>
-			  <div class="col-md-3">
-					<div class="form-group">
-						 <label style="display:block;">Vacuum Mixing Angle</label>
-						 <input style="display:inline;width:50%;" type="number" class="form-control border-input" placeholder="0.59" id="vacMixingAngle" v-model.number="mixangle"> RAD
-					</div>
-			  </div>
-			  <!-- <div class="col-md-3">
-					<div class="form-group">
-						 <label style="display:block;">Initial $\nu_e$ Probability</label>
-						 <input style="display:inline;width:50%;" type="number" class="form-control border-input" placeholder="1" id="vacInitialElectronFlavor" v-model.number="initstate">
-					</div>
-			  </div> -->
-			  <div class="col-md-3">
-					<div class="form-group">
-						 <label style="display:block;">End Point</label>
-						 <input style="display:inline;width:50%;" type="number" class="form-control border-input" placeholder="10" id="vacEnd" v-model.number="endpoint"> km
-					</div>
-			  </div>
 
-	</div>
+				</div>
+			</div>
 
 
-  <div style="text-align:center;">
-     <hr>
-	  <button v-on:click="execplot" class="ti-stats-up btn btn-primary btn-round"> Plot </button>
-     <hr>
-	</div>
+			<footer class="footer">
+				<div class="container-fluid">
+					<nav class="pull-left">
+						<ul>
 
-  <div id="vacuum-oscillations-plot"></div>
-  <div id="vacuum-vector-plot"></div>
-
-
-<!-- VUE PLOTS END -->
-
-
-
-
-
-                                <!-- Input Parameters END -->
-
-                                <div class="footer">
-
-                                    <hr>
-                                    <div class="stats">
-                                        <i class="ti-info"></i> Calculated Using Analytical Formula. $
-                                            P(x) = \sin^2(2\theta_v) \sin^2\left( \delta m^2 x\big/4E \right)$.
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-
-
-        <footer class="footer">
-            <div class="container-fluid">
-                <nav class="pull-left">
-                    <ul>
-
-                        <li>
-                            <a href="http://neutrino.xyz">
+							<li>
+								<a href="http://neutrino.xyz">
                                 Neutrino Physics
                             </a>
-                        </li>
-                        <li>
-                            <a href="http://docs.neutrino.xyz">
+							</li>
+							<li>
+								<a href="http://docs.neutrino.xyz">
                                Neutrino Notes
                             </a>
-                        </li>
+							</li>
 
-                    </ul>
-                </nav>
-                <div class="copyright pull-right">
-                    &copy; <script>document.write(new Date().getFullYear())</script>, made with <i class="fa fa-heart heart"></i> by <a href="http://openmetric.org">Lei Ma</a>
-                </div>
-            </div>
-        </footer>
+						</ul>
+					</nav>
+					<div class="copyright pull-right">
+						&copy;
+						<script>
+							document.write(new Date().getFullYear())
+						</script>, made with <i class="fa fa-heart heart"></i> by <a href="http://openmetric.org">Lei Ma</a>
+					</div>
+				</div>
+			</footer>
 
-    </div>
-</div>
+		</div>
+	</div>
 
 
 </body>
 
-	<!-- <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.4.4/vue.min.js'></script> -->
-	<script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.2/vue.js'></script>
-	<!-- <script src='https://unpkg.com/vue-chartjs@2.8.7/dist/vue-chartjs.full.min.js'></script> -->
+<!-- <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.4.4/vue.min.js'></script> -->
+<script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.2/vue.js'></script>
+<!-- <script src='https://unpkg.com/vue-chartjs@2.8.7/dist/vue-chartjs.full.min.js'></script> -->
 
-	<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
-  	<script  src="assets/vue/vacuum.js"></script>
-
-
-    <!--   Core JS Files   -->
-    <script src="assets/js/jquery-1.10.2.js" type="text/javascript"></script>
-	<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
-
-	<!--  Checkbox, Radio & Switch Plugins -->
-	<script src="assets/js/bootstrap-checkbox-radio.js"></script>
+<script src="assets/vue/vacuum.js"></script>
 
 
-    <!--  Notifications Plugin    -->
-    <script src="assets/js/bootstrap-notify.js"></script>
+<!--   Core JS Files   -->
+<script src="assets/js/jquery-1.10.2.js" type="text/javascript"></script>
+<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
+
+<!--  Checkbox, Radio & Switch Plugins -->
+<script src="assets/js/bootstrap-checkbox-radio.js"></script>
 
 
-    <!-- Paper Dashboard Core javascript and methods for Demo purpose -->
-	<script src="assets/js/paper-dashboard.js"></script>
-
-    <!-- WIP Warning -->
-    <script type="text/javascript">
-    	$(document).ready(function(){
+<!--  Notifications Plugin    -->
+<script src="assets/js/bootstrap-notify.js"></script>
 
 
-        	$.notify({
-            	icon: 'ti-pulse',
-            	message: "Welcome to <b>Neutrino Oscillations JS</b> (Work In Progress). We appreciate your bug report and suggestions on <a href='https://github.com/NeuPhysics/neutrino-oscillation-js/issues' style='color:black;'>github</a>."
+<!-- Paper Dashboard Core javascript and methods for Demo purpose -->
+<script src="assets/js/paper-dashboard.js"></script>
 
-            },{
-                type: 'info',
-                timer: 10000,
-                placement: {
-                    from: 'bottom',
-                    align: 'left'
-                }
-            });
+<!-- WIP Warning -->
+<script type="text/javascript">
+	$(document).ready(function() {
 
-    	});
-	</script>
 
-    <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+		$.notify({
+			icon: 'ti-pulse',
+			message: "Welcome to <b>Neutrino Oscillations JS</b> (Work In Progress). We appreciate your bug report and suggestions on <a href='https://github.com/NeuPhysics/neutrino-oscillation-js/issues' style='color:black;'>github</a>."
 
-      ga('create', 'UA-66327435-4', 'auto');
-        ga('send', 'pageview');
+		}, {
+			type: 'info',
+			timer: 10000,
+			placement: {
+				from: 'bottom',
+				align: 'left'
+			}
+		});
 
-    </script>
+	});
+</script>
+
+<script>
+	(function(i, s, o, g, r, a, m) {
+		i['GoogleAnalyticsObject'] = r;
+		i[r] = i[r] || function() {
+			(i[r].q = i[r].q || []).push(arguments)
+		}, i[r].l = 1 * new Date();
+		a = s.createElement(o),
+			m = s.getElementsByTagName(o)[0];
+		a.async = 1;
+		a.src = g;
+		m.parentNode.insertBefore(a, m)
+	})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+	ga('create', 'UA-66327435-4', 'auto');
+	ga('send', 'pageview');
+</script>
 
 </html>
