--- a/misc.html
+++ b/misc.html
@@ -6,7 +6,7 @@
 	<link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicon.png">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-	<title>MISC</title>
+	<title>MISC | Neutrino Physics with Javascript</title>
 
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
@@ -120,34 +120,44 @@
 	-->
 
     	<div class="sidebar-wrapper">
-            <div class="logo">
-                <a href="#" class="simple-text">
-                    Neutrino Oscillation JavaScript
-                </a>
-            </div>
+			<div class="logo">
+				 <a href="#" class="simple-text">
+						Neutrino Physics with Javascript
+				 </a>
+			</div>
 
-            <ul class="nav">
-                <li>
-                    <a href="index.html">
-                        <p>Vacuum Oscillations (2)</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="matter.html">
-                        <p>Oscillations in Matter</p>
-                    </a>
-                </li>
-                <li class="active">
-                    <a href="misc.html">
-                        <p>MISC</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="about.html">
-                        <p>About</p>
-                    </a>
-                </li>
-            </ul>
+			<ul class="nav">
+				<li>
+					 <a href="index.html">
+						  <p>Home</p>
+					 </a>
+				</li>
+				 <li>
+					  <a href="vacuum.html">
+							<p>Oscillations in Vacuum</p>
+					  </a>
+				 </li>
+				<li>
+					  <a href="matter.html">
+							<p>Oscillations in Matter</p>
+					  </a>
+				 </li>
+				 <li>
+					  <a href="toolbox.html">
+							<p>Toolbox</p>
+					  </a>
+				 </li>
+				 <li class="active">
+					  <a href="misc.html">
+							<p>MISC</p>
+					  </a>
+				 </li>
+				 <li>
+					  <a href="about.html">
+							<p>About</p>
+					  </a>
+				 </li>
+			</ul>
     	</div>
     </div>
 
