--- a/toolbox.html
+++ b/toolbox.html
@@ -6,7 +6,7 @@
 	<link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicon.png">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-	<title>About | Neutrino Physics with Javascript</title>
+	<title>Toolbox for Neutrino Physics | Neutrino Physics with Javascript</title>
 
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
@@ -29,6 +29,85 @@
     <link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
     <link href="assets/css/themify-icons.css" rel="stylesheet">
 
+    <!--   Core JS Files   -->
+    <script src="assets/js/jquery-1.10.2.js" type="text/javascript"></script>
+	<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
+
+        <script type="text/x-mathjax-config">
+      MathJax.Hub.Config({ TeX: { extensions: ["color.js","cancel.js", "AMSmath.js", "AMSsymbols.js"] }});
+    </script>
+    <script type="text/x-mathjax-config">
+    MathJax.Hub.Register.StartupHook("TeX Jax Ready",function () {
+      MathJax.Hub.Insert(MathJax.InputJax.TeX.Definitions.macros,{
+        cancel: ["Extension","cancel"]
+        });
+     });
+     </script>
+    <script type="text/x-mathjax-config">
+      MathJax.Hub.Config({
+        tex2jax: {
+          skipTags: ['script', 'noscript', 'style', 'textarea', 'pre', 'code']
+        }
+      });
+    </script>
+    <script type="text/x-mathjax-config">
+      MathJax.Hub.Queue(function() {
+          var all = MathJax.Hub.getAllJax(), i;
+          for(i=0; i < all.length; i += 1) {
+              all[i].SourceElement().parentNode.className += ' has-jax';
+          }
+      });
+    </script>
+    <script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+      tex2jax: {
+        processEscapes: true
+      }
+    });
+    </script>
+    <script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+      TeX: {
+        Macros: {
+          overlr: ['\\overset\\leftrightarrow{\#1}',1],
+          overl: ['\\overset\leftarrow{\#1}',1],
+          overr: ['\\overset\rightarrow{\#1}',1],
+          bra: ['\\left\\langle \#1\\right|',1],
+          ket: ['\\left| \#1\\right\\rangle',1],
+          braket: ['\\langle \#1 \\mid \#2 \\rangle',2],
+          avg: ['\\left< \#1 \\right>',1],
+          slashed: ['\\cancel{\#1}',1],
+          bold: ['\\boldsymbol{\#1}',1],
+          sech: ['\\operatorname{sech}{\#1}',1],
+          csch: ['\\operatorname{csch}{\#1}',1]
+        }
+      }
+    });
+    </script>
+
+        <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+
+        <script type="text/x-mathjax-config">
+          MathJax.Hub.Config({
+            showProcessingMessages: false,
+            messageStyle: 'none',
+            tex2jax: {
+              inlineMath: [['$','$']],
+              displayMath: [['$$','$$']],
+              processEnvironments: false
+            },
+            TeX: {
+              equationNumbers: {
+                autoNumber: "AMS"
+              }
+            },
+            'HTML-CSS': {
+              imageFont: null
+            }
+          });
+        </script>
+
+
 </head>
 <body>
 
@@ -41,44 +120,44 @@
 	-->
 
     	<div class="sidebar-wrapper">
-            <div class="logo">
-                <a href="#" class="simple-text">
-                     Neutrino Physics with Javascript
-                </a>
-            </div>
+			<div class="logo">
+				 <a href="#" class="simple-text">
+						Neutrino Physics with Javascript
+				 </a>
+			</div>
 
-            <ul class="nav">
-					<li>
-						 <a href="index.html">
-							  <p>Home</p>
-						 </a>
-					</li>
-                <li>
-                    <a href="vacuum.html">
-                        <p>Oscillations in Vacuum</p>
-                    </a>
-                </li>
-               <li>
-                    <a href="matter.html">
-                        <p>Oscillations in Matter</p>
-                    </a>
-                </li>
-					 <li>
-                    <a href="toolbox.html">
-                        <p>Toolbox</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="misc.html">
-                        <p>MISC</p>
-                    </a>
-                </li>
-                <li class="active">
-                    <a href="about.html">
-                        <p>About</p>
-                    </a>
-                </li>
-            </ul>
+			<ul class="nav">
+				<li>
+					 <a href="index.html">
+						  <p>Home</p>
+					 </a>
+				</li>
+				 <li>
+					  <a href="vacuum.html">
+							<p>Oscillations in Vacuum</p>
+					  </a>
+				 </li>
+				<li>
+					  <a href="matter.html">
+							<p>Oscillations in Matter</p>
+					  </a>
+				 </li>
+				 <li class="active">
+					  <a href="toolbox.html">
+							<p>Toolbox</p>
+					  </a>
+				 </li>
+				 <li>
+					  <a href="misc.html">
+							<p>MISC</p>
+					  </a>
+				 </li>
+				 <li>
+					  <a href="about.html">
+							<p>About</p>
+					  </a>
+				 </li>
+			</ul>
     	</div>
     </div>
 
@@ -92,7 +171,7 @@
                         <span class="icon-bar bar2"></span>
                         <span class="icon-bar bar3"></span>
                     </button>
-                    <a class="navbar-brand" href="#">About</a>
+                    <a class="navbar-brand" href="#">Toolbox</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
@@ -127,42 +206,42 @@
             <div class="container-fluid">
                 <div class="card">
                     <div class="header">
-                        <h4 class="title">About</h4>
-                        <p class="category">Authors, Roadmap, etc</p>
+                        <h4 class="title">Units</h4>
+                        <p class="category">Unit Conversions etc</p>
 
                     </div>
-                    <div class="content">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <h5>What's this?</h5>
-
-                                <div class="alert alert-info alert-with-icon" data-notify="container">
-                                    <span data-notify="icon" class="ti-pie-chart"></span>
-                                    <span data-notify="message">Work in Progress!</span>
-                                </div>
-                                <div>
-                                    <p>
-                                        This is a work trying to demonstrate neutrino oscillations using javascript.
-                                    </p>
+                    <div class="content" id="units">
+                        <div class="places-buttons">
+                            <div class="row">
+                                <div class="col-md-9">
+                                    <h5>Natural Units
+                                        <p class="category">Conversions between Natural Units and SI</p>
+                                    </h5>
                                 </div>
                             </div>
-                            <div class="col-md-6">
-                                <h5>Author(s)</h5>
-                                <div class="alert alert-info alert-with-icon" data-notify="container">
-                                    <span data-notify="icon" class="ti-gift"></span>
-                                    <span data-notify="message">Join Us</span>
-                                </div>
-                                <div>
-                                    <p>
-                                        I am a graduate student working on neutrino oscillations.
-                                    </p>
-                                </div>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <h6 class="title">From SI to Natual Units</h6>
 
+												<!-- Distance -->
+												{{ fm }}
+
+                                </div>
+                                <div class="col-md-6">
+											  <h6 class="title">From Natural Units to SI</h6>
+                                </div>
                             </div>
+
                         </div>
+
 
                     </div>
                 </div>
+
+
+
+
+
             </div>
         </div>
 
@@ -197,9 +276,14 @@
 
 </body>
 
-    <!--   Core JS Files   -->
-    <script src="assets/js/jquery-1.10.2.js" type="text/javascript"></script>
-	<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
+<!-- <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.4.4/vue.min.js'></script> -->
+<script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.2/vue.js'></script>
+<!-- <script src='https://unpkg.com/vue-chartjs@2.8.7/dist/vue-chartjs.full.min.js'></script> -->
+
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
+<script  src="assets/vue/units.js"></script>
+
 
 	<!--  Checkbox, Radio & Switch Plugins -->
 	<script src="assets/js/bootstrap-checkbox-radio.js"></script>
@@ -210,14 +294,12 @@
     <!--  Notifications Plugin    -->
     <script src="assets/js/bootstrap-notify.js"></script>
 
-    <!--  Google Maps Plugin    -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+
 
     <!-- Paper Dashboard Core javascript and methods for Demo purpose -->
 	<script src="assets/js/paper-dashboard.js"></script>
 
-	<!-- Paper Dashboard DEMO methods, don't include it in your project! -->
-	<script src="assets/js/demo.js"></script>
+
 
     <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
